# tinyDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
database_engine/: CMakeLists.txt  main.cpp
database_engine/heap_file/: CMakeLists.txt  heap_file.cpp  heap_file.hpp
database_engine/image-compression/: README.md
database_engine/image-compression/include/compression/: types.hpp
database_engine/image-compression/src/compression/: decoder.hpp  encoder.hpp
database_engine/image-compression/src/utils/: image_utils.cpp
database_engine/storage/: CMakeLists.txt
database_engine/storage/src/: main.cpp  movies.db  page_manager  slotted_page.cpp
src/: build_tinyDB.sh  main.cpp
src/demo/storage/: heap_file.cpp
src/image-compression/: CMakeLists.txt
src/image-compression/include/compression/: constants.hpp
src/image-compression/src/compression/: decoder.cpp  encoder.cpp
src/image-compression/src/utils/: image_utils.hpp
src/image-compression/tests/: compression_tests.cpp  utils_tests.cpp
src/include/storage/: heap_file.hpp  slotted_page.hpp
src/storage/: CMakeLists.txt  heap_file.cpp  slotted_page.cpp
